--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -9,6 +9,9 @@ ADD https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aw
 # Iceberg Runtime
 ADD https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-spark-runtime-3.4_2.12/1.3.0/iceberg-spark-runtime-3.4_2.12-1.3.0.jar /opt/spark/jars/
 
+# Postgres JDBC 
+ADD https://repo1.maven.org/maven2/org/postgresql/postgresql/42.6.0/postgresql-42.6.0.jar /opt/spark/jars/
+
 RUN chmod 644 /opt/spark/jars/*.jar
 
 USER spark
